devscripts (2.15.6) UNRELEASED; urgency=low

  * licensecheck: extract © owner when © and owners are specified on 2 lines.

 -- Dominique Dumont <dod@debian.org>  Fri, 19 Jun 2015 07:42:55 +0200

devscripts (2.15.5) unstable; urgency=low

  [ Cyril Brulebois ]
  * Update chdist bash-completion file with the architectures currently (as
    of 2015-04-28) listed on buildd.debian.org and buildd.debian-ports.org.
    (Closes: #783634)
  * Add support for RMADISON_SSL_CA_FILE and RMADISON_SSL_CA_PATH, so that
    one can point to system-specific locations for CA-related files, and pass
    them to curl/wget via the appropriate options.  (Closes: #784812)

  [ James McCoy ]
  * wrap-and-sort:
    + Always remove empty elements from lists so “-t” doesn't add a new, empty
      element.  (Closes: #783630)
    + Remove empty lines in debhelper-related files.  (Closes: #780667)
  * Install Perl modules into $Config{vendorlib} and remove the hacks in
    various scripts to make them see devscript's modules.
  * Add bash completion scripts for uscan (thanks to Ben Finney) and
    mk-origtargz.  (Closes: #784394)
  * Stop building and shipping libvfork.so since strace has handled vforks for
    at least a decade.
  * Move bash-completion scripts from /etc/bash_completion.d (compat
    directory) to /usr/share/bash-completion/completions.
  * debdiff: Inspect wdiff's return code rather than Dpkg::IPC::spawn's
    exception to determine if wdiff found differences.  (Closes: #786518)
  * Store cached files in $XDG_CACHE_HOME instead of ~/.devscripts_cache.
    (Closes: #659330)
  * bts:
    + Use https to talk to bugs.debian.org
    + Use URI & URI::QueryParam to parse URIs rather than regexps.  This fixes
      issues with not detecting BTS URLs as valid due to ordering of query
      parameters.  (Closes: #786706)
  * debuild: Recognize -jauto as a valid option. Based on a patch by Reiner
    Herrmann.  (Closes: #787276)
  * uscan: