@@ -1,6 +1,8 @@
 devscripts (2.15.6) UNRELEASED; urgency=low
 
-  * licensecheck: extract © owner when © and owners are specified on 2 lines.
+  * licensecheck:
+    * extract © owner when © and owners are specified on 2 lines.
+    * fix digia © and license extraction (Closes: #789074)
 
  -- Dominique Dumont <dod@debian.org>  Fri, 19 Jun 2015 07:42:55 +0200
 
